--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
     <meta charset="UTF-8">
     <title>Login - PadelStats</title>
     <link rel="stylesheet" href="css/style.css">
