add method in repository, fix html

--- a/src/main/resources/templates/register_page.html
+++ b/src/main/resources/templates/register_page.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="login-box">
-    <h2>Register</h2>
-    <form method="post" action="/register" th:object="${registerRequest}">
+    <h2>PadelStats - Register</h2>
+    <form method="post" action="/login" th:object="${registerRequest}">
         <div class="user-box">
             <input type="text" name="Username" required="">
             <label>Username</label>
