--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="login-box">
-    <h2>Login</h2>
-    <form>
+    <h2>PadelStats - Login</h2>
+    <form method="post" action="/register" th:object="${loginRequest}">
         <div class="user-box">
             <input type="text" name="" required="">
             <label>Username</label>
@@ -25,7 +25,7 @@
             <span></span>
             Submit
         </a>
-        <a href="/login">Do you already have an account?</a>
+        <a href="/register">Do you already have an account?</a>
     </form>
 </div>
 </body>
